@@ -60,12 +60,3 @@ void TSoundManager::PlaySound(string name) {
   }
 }
 
-/* **********************************************************************
- * Load Sound - loads a sound (caches)
- * *********************************************************************/
-void TSoundManager::LoadSound(string name) {
-  Mix_Chunk * tmp = RequireRessource(name);
-  if (tmp) {
-    ReleaseRessource(tmp);
-  }
-}
